small change for PR

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
             <h1>Where in the world?</h1>
             <button id="switch-mode"> <img src="images/iconMoon.svg" alt="dark-light mode icon" width, height="12.5px" id="mode-vector"> Dark Mode</button>
+            <!-- error is here -->
     </header>
             
             <main>
