--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
     <header>
             <h1>Where in the world?</h1>
-            <button id="switch-mode"> <img src="images/iconMoon.svg" alt="dark-light mode icon" width, height="12.5px" id="mode-vector"> Dark Mode</button>
-            <!-- error is here -->
+            <button id="switch-mode"> 
+            <img src="images/iconMoon.svg" alt="dark-light mode icon" width, height="12.5px" id="mode-vector"> 
+            <span>Dark Mode</span>
+            </button>
     </header>
             
             <main>
