improve keyboard accessibility

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
             <main>
                 <section id="search-wrapper">
-                <form action="" id="searching-bar">
+                <form action="" id="searching-bar" tabindex="0">
                     <img src="images/search-dark.svg" alt="searching icon for search regions" width, height="20px" id="search-vector">
                     <input type="text" placeholder="Search for the country...">
                 </form>
@@ -33,7 +33,7 @@
                     <a href="">Afganistan, Asia</a>
                 </div> -->
                
-            <div id="region-filter">
+            <div id="region-filter" tabindex="0">
                 <label for="region-select">Filter by region</label>
                 <img src="images/down-arrow-black.png" alt="arrow icon for pointing to regions" width, height="10px" id="region-vector">
             </div>    
